--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+.container {
+  background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);
+}
+.container img {
+  width: 30px;
+    height: 30px;
+    border-radius: 30%;
+    margin-bottom: 10px;
+}
+
 .cards {
     display: flex;
     justify-content: center;
@@ -17,12 +27,12 @@
     background-color: #f5f5f5;
   }
   
-  .card img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-  }
+  /* .card img {
+    width: 30px;
+    height: 30px;
+   // border-radius: 30%;
+    // margin-bottom: 10px;
+  } */
   
   .card .card-info {
     text-align: center;
